# time_series_tensor

./: .gitignore  README.md
bridge/: INVARIANTS.md  SPEC_MAPPING.md
bridge/examples/: small_cases.md
lean/: Main.lean  lake-manifest.json  lakefile.lean
lean/Tensor/: Basics.lean  Decomposition.lean  Norms.lean  Theorems.lean
rust/: Cargo.toml
rust/data/: aapl_1y.csv
rust/src/: main.rs  tensor_net.rs
rust/tests/: invariants.rs
src/: classical.rs  data.rs  main.rs  tensor_net.rs
